k8srequiredlabels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: k8s-ingress-must-have-owner
spec:
  match:
    kinds:
      - apiGroups: ["extensions", "networking.k8s.io"]
        kinds: ["Ingress"]
    namespaces:
      - "opatest"
  parameters:
    message: "All Ingress must have an `owner` label that points to your company username"
    labels:
      - key: owner
        allowedRegex: "kris"
